objects/Product_category__c.object
<CustomObject>
    <fields>
        <fullName>ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent category</label>
        <referenceTo>Product_category__c</referenceTo>
        <relationshipLabel>Product categories</relationshipLabel>
        <relationshipName>Product_categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpecificStorageConditions__c</fullName>
        <label>Specific storage conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SaveInfo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StorageConditions_del__c</fullName>
        <formula>IF(
INCLUDES( SpecificStorageConditions__c ,&apos;FridgeStorage&apos;),
&apos;Холодильник; &apos;,
&apos;&apos;
)+
IF(
INCLUDES( SpecificStorageConditions__c,&apos;DryStorage&apos;),
&apos;Сухе приміщення; &apos;,
&apos;&apos;
)+
IF(
INCLUDES( SpecificStorageConditions__c,&apos;WarmStorage&apos;),
&apos;Тепле приміщення; &apos;,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storage conditions</label>
        <type>Text</type>
    </fields>
    <label>Product category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentCategory__c</columns>
        <columns>SpecificStorageConditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Product_categories</fullName>
        <columns>NAME</columns>
        <columns>ParentCategory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Mine</filterScope>
        <label>Product categories</label>
    </listViews>
    <nameField>
        <label>Category name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>